# rust-backend-template-full

./: .env  .env.dev  Cargo.toml  Dockerfile  README.md  diesel.toml
migrations/2025-08-25-193705_create_table/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
src/config/db/: mod.rs
src/dto/: health_check.rs  users.rs
src/handler/: health_check.rs  mod.rs  post_handler.rs  user_handler.rs  ws_handler.rs
src/repository/: mod.rs  post_repo.rs  user_repo.rs
src/service/: mod.rs  post_service.rs  user_service.rs
