[package]
name = "wk18k-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-ws = "0.3"
futures-util = "0.3.31"
diesel = { version = "2.2", features = ["postgres", "r2d2"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
env_logger = "0.10"  # เพิ่มสำหรับ logging
log = "0.4"         # เพิ่มสำหรับ logging